# bourbon_finder

./: .env  .example.env  .gitignore  buffalo_trace_job-deployment.yaml  example.env  project_setup.bat
.github/workflows/: testing.yml
batch/: install_project.sh  prefect_agent.bash  prefect_agent_remote.bash  prefect_orion.bash  test_run.bash
bourbon/: README.md  pyproject.toml
bourbon/bourbon/: __init__.py  _path.py  buffalo_trace.db  buffalo_trace.py  eda.ipynb  finder_tool.py  get_bourbon.py  get_buffalo_trace.py  log_fx.py  prefect_ind.py  utilities.py
bourbon/bourbon/archive/: import_based_bt.py
bourbon/bourbon/data/: bourbons.csv  test_bt.html
bourbon/bourbon/jupyter/: buffalo_trace.ipynb  db_explore.ipynb
bourbon/bourbon/jupyter/data/: sample_html.html
bourbon/bourbon/my_data/: bourbons.csv  page.html  test_head.json  url_text.txt
bourbon/bourbon/prefect_util/: prefect_docker.py  prefect_register.py
bourbon/debug/: debug_buffalo_trace.py  static_extract.csv
bourbon/jupyter/: check_db.ipynb  check_env_variables.ipynb  time_to_sell.ipynb
bourbon/tests/: test_async.py
