[tool.poetry]
name = "bourbon"
version = "0.1.0"
description = ""
authors = ["Sullyrows <Sullyrows@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pandas = "^1.5.1"
bs4 = "^0.0.1"
playwright = "^1.27.1"
slimit = "^0.8.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
