[tool.poetry]
name = "bourbon"
version = "0.1.0"
description = ""
authors = ["Sullyrows <Sullyrows@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pandas = "^1.5.1"
bs4 = "^0.0.1"
playwright = "^1.27.1"
slimit = "^0.8.1"
python-dotenv = "^0.21.1"
sqlalchemy = "^1.4.46"
prefect = "^2.7.12"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"
plotly = "^5.12.0"
nbformat = "^5.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
